# rec_table

./: .gitignore  CMakeLists.txt  Makefile  constants.hpp  debug_util.cpp  extract_cell.cpp  install.sh  preprocessing.cpp  preprocessing.hpp  requirements.txt
.ebextensions/: 01_packages.config  02_python.config
.ipynb_checkpoints/: Retrain neural net!-Copy1-checkpoint.ipynb
end_to_end/: rec_table.py
extract/: CMakeLists.txt  Makefile  compile_run_sample.sh  constants.hpp  debug_util.hpp  extract_cell  extract_cell.cpp  extract_cell.hpp  line_util.cpp  line_util.hpp  preprocessing.cpp  preprocessing.hpp
segmentation/: CMakeLists.txt  FindTesseract.cmake  Makefile  build_macOS.sh  segment  segment.cpp
tensorflow/: empty.txt
train/: HANDWRITTEN.ipynb  Retrain data debugging.ipynb  TesseractTraining.ipynb  base.py  emnist.py  prediction_subset.py  predictions.py  retrain.py  train_all.py  train_digits.py
train/checkpoint/: 0_9.index  0_9_x.index  0_9_x_X.index  2_3_6_7_9.index  checkpoint  rikRIK.index
train/data/test/: g.png.exp
web/turk/: env.sh  kill_gnuicorn.sh  manage.py  requirements.txt  run_prediction.sh  start_gunicorn.sh
web/turk/.ebextensions/: django.config
web/turk/catalog/: admin.py  constants.py  consumers.py  data_util.py  email_util.py  emnist.py  forms.py  mnist_sagemaker.py  mnist_util.py  models.py  path_util.py  routing.py  sagemaker_util.py  tasks.py  urls.py  views.py
web/turk/catalog/migrations/: 0001_initial.py  0002_auto_20171017_0359.py  (+12 more)
web/turk/turk/: asgi.py  base.py  settings.py  settings_prod.py  urls.py  wsgi.py
(+23 files in other folders)
